feat: add tagline

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,8 @@ const calLink = "https://cal.com/goattech/consultation";
     </style>
   </head>
   <body>
-    <h1>goattech development</h1>
+    <h1 style="font-size: 3rem; margin-bottom: 0.5rem;">goattech development</h1>
+    <em>simple software solutions.</em>
     <a href={calLink} class="button">connect</a>
   </body>
 </html>
