chore: comment out consultation link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,6 @@ const calLink = "https://cal.com/goattech/quick-consultation";
   <body>
     <h1 style="font-size: 3rem; margin-bottom: 0.5rem;">goattech development</h1>
     <em>simple software solutions.</em>
-    <a href={calLink} class="button">connect</a>
+    <!-- <a href={calLink} class="button">connect</a> -->
   </body>
 </html>
